Add change Password User feature